istio_config/destination_rule/productpage_destination_rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: default
  name: productpage
spec:
  host: productpage
  subsets:
    - name: v1
      labels:
        version: v1
